--- a/src/default/assets/css/setup/_typography.sass
+++ b/src/default/assets/css/setup/_typography.sass
@@ -20,6 +20,7 @@ code, pre
 
 pre
     padding: 10px
+    background-color: var(--color-codeblock-background)
 
     code
         padding: 0
